# SoC_master_thesis

./: Keta  README.md  data_analysis  data_analysis_1attempt  data_analysis_plots1  data_loading_preprocessing  extremes_draft  pyproject.toml  temporal_variability
main_results/: DRAFTextremes.md  ExtremeValueAnalysis.md  analysis_output.md  extremes.md  river_discharge_variability.md  study_area.md  variability_analysis.md  variability_river_discharge.md  variability_water_level.md  water_level_variability.md
script/: POT_extemes  README.md  RL_Discharge_Anomaly.csv  RL_Discharge_Raw.csv  RL_WaterLevel_Anomaly.csv  RL_WaterLevel_Raw.csv  RtsEva_keta.R  cds_request.py  data_loading_preprocessing  data_loading_preprocessing.py  keta_analysis.ipynb  non_va_mannaggia_boia.R  try.ipynb  variability_analysis  variability_analysis.ipynb
useful_materials/: still_to_be_reviewed.md
