[project]
name = "soc-master-thesis"
version = "0.1.0"
description = ""
authors = [
    {name = "tomsail",email = "saillour.thomas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xarray (>=2025.9.0,<2026.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "cartopy (>=0.25.0,<0.26.0)",
    "cdsapi (>=0.7.6,<0.8.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false